# career-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  config.py  docker-entrypoint.sh  main.py  pyproject.toml  schema.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.streamlit/: secrets.toml.example
api/: __init__.py  auth.py  deps.py  frontend.py  main.py  plugins.py  routes_grill.py  routes_jobs.py  routes_key.py  routes_portfolio.py  routes_read.py  routes_tailor.py  routes_write.py  schemas.py
auth/: __init__.py  cli_auth.py  firebase_auth.py  key_vault.py  provider.py
cli/: __init__.py  app.py  prefs.py  session.py
database/: __init__.py  firestore_session.py  workspace_store.py
discovery/: __init__.py  cli.py  job_source.py  mcp_server.py  preferences.py  primary.py  scout.py  store.py
docs/: AGENT_EXECUTION_PROMPT.md  ARCHITECTURE.md  CAPSTONE_RUNBOOK.md  CONTEXT_STRATEGY.md  DISCOVERY_DEMO.md  GROOMING.md  HANDOFF.md  PHASE10_UI_MOCKUP.md  PROGRESS.md  PROJECT_PLAN.md  QA_DEPLOY_RUNBOOK.md  REFINED_PROJECT_PLAN.md  REVIEW.md  SECURITY.md
docs/history/: GROOMING_ARCHIVE.md
evaluation/: __init__.py  test_config.json  user_simulator.py
frontend/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.mjs  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: login.spec.ts
frontend/scripts/: check-bundle-size.mjs  gen-openapi.sh
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/dashboard/: DashboardContent.tsx  dashboard.test.tsx  page.tsx
frontend/src/app/grill/: GrillContent.tsx  grill.test.tsx  page.tsx
frontend/src/app/jobs/: JobsContent.tsx  jobs.test.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/portfolio/: PortfolioContent.tsx  page.tsx  portfolio.test.tsx
frontend/src/app/settings/: SettingsContent.tsx  page.tsx  settings.test.tsx
frontend/src/app/tailor/: TailorContent.tsx  page.tsx  tailor.test.tsx
frontend/src/components/: ActionCard.tsx  AppShell.tsx  CollapsibleSection.tsx  CopywriterPanel.tsx  EmptyState.tsx  Field.tsx  InlineError.tsx  KeySetupCard.tsx  MetricStat.tsx  PrimaryButton.tsx  ResumePreview.tsx  SidebarNav.tsx  SplitButton.tsx  StatusBadge.tsx  StreamingTranscript.tsx  ThemeToggle.tsx  Toast.tsx  appshell.test.tsx
frontend/src/components/forms/: PreferencesForm.tsx  ProfileForm.tsx  preferencesForm.test.tsx  profileForm.test.tsx
frontend/src/lib/: flags.ts  theme.ts
frontend/src/lib/api/: client.ts  grill.ts  models.ts  types.gen.ts
frontend/src/lib/auth/: context.tsx  firebase.ts  guard.test.tsx  guard.tsx
frontend/src/lib/grill/: useGrill.ts
frontend/src/lib/query/: hooks.ts  keys.ts  provider.tsx
frontend/src/lib/tailor/: resumeExport.ts  useMasterResume.ts  useTailor.ts
frontend/src/test/: utils.tsx
frontend/src/test/msw/: handlers.ts  server.ts
infrastructure/: .gitignore  README.md
infrastructure/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/envs/prod/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/envs/qa/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/artifact_registry/: main.tf
infrastructure/modules/auth_secrets/: main.tf
infrastructure/modules/cloud_run/: main.tf
infrastructure/modules/cloud_run_domain_mapping/: main.tf  variables.tf
infrastructure/modules/cloud_run_job/: main.tf
infrastructure/modules/cloudflare_dns/: main.tf  variables.tf
infrastructure/modules/firestore/: main.tf
infrastructure/modules/scheduler/: main.tf
infrastructure/modules/secret_manager/: main.tf
integration/: __init__.py  model_client.py
jobs/: __init__.py  pending_action_sweep.py  sweep_cli.py  sweep_endpoint.py
models/: __init__.py  registry.py
skills/build-slice/: SKILL.md
skills/cloud_ops/: SKILL.md
skills/resume-careerengine/: SKILL.md
skills/ship-change/: SKILL.md
skills/ship-change/scripts/: deploy_and_verify.sh
skills/wait-for-pr-review/: SKILL.md
skills/wait-for-pr-review/scripts/: wait_for_review.sh
templates/: classic_resume.html
tests/: __init__.py  fakes.py  test_api_auth.py  test_api_frontend.py  test_api_grill.py  test_api_grill_resume.py  test_api_jobs_discover.py  test_api_key.py  test_api_plugins.py  test_api_portfolio.py  test_api_read.py  test_api_tailor.py  test_api_write.py  test_application_store.py  test_async_runner.py  test_checkpoint_leave_copy.py  test_cli_auth.py  test_config.py  test_contract_roundtrip.py  test_copywriter.py  test_coverage.py  test_discovery_cli.py  test_discovery_loop_cli.py  test_discovery_schema.py  test_firebase_auth.py  test_firestore_session.py  test_gate_coverage.py  test_grill_frontier_label.py  test_integration.py  test_jd_utils.py  test_job_source.py  test_jobs_handlers.py  test_jobs_runner.py  test_key_vault.py  test_ledger_store.py  test_mcp_server.py  test_model_api_error.py  test_model_client_di.py  test_model_client_retry.py  test_nodes.py  (+31 more)
tests/fixtures/: cleaned_jd.txt  job_description.html
tools/: __init__.py  pdf_renderer.py  resume_parser.py  web_scraper.py
web/: __init__.py  application_store.py  async_runner.py  bootstrap.py  copywriter.py  coverage.py  dashboard.py  exporter.py  grill_labels.py  grill_ui.py  jd_utils.py  jobs.py  jobs_runner.py  navigation.py  portfolio.py  portfolio_store.py  preferences_store.py  profile_store.py  resume_builder.py  resume_render.py  session_loader.py  streamlit_app.py  tailor.py
workflows/: __init__.py  discovery_graph.py  nodes.py  observability.py  prompts.py
