[build-system]
requires = ["setuptools>=74.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "career-engine"
version = "0.1.0"
description = "Privacy-first AI career-portfolio platform on Google ADK 2.0"
requires-python = ">=3.12"
dependencies = [
    # Google ADK 2.0 — pin to exact GA release; verify import paths at install time
    "google-adk==2.0.0",
    # Pydantic v2 — strict typing for all boundaries
    "pydantic==2.13.4",
    # Settings management (pydantic extension)
    "pydantic-settings==2.10.1",
    # Templating
    "jinja2==3.1.6",
    # PDF rendering — pure-Python HTML→PDF engine (WS-B). Chosen over headless
    # Chrome because it needs no browser/display server in the Linux devcontainer.
    # See ARCHITECTURE.md §7 deviation note (logged in PROGRESS.md).
    "weasyprint==69.0",
    # DOCX résumé export (editable Word output alongside PDF/Markdown).
    "python-docx==1.2.0",
    # Google Cloud
    "google-cloud-firestore==2.28.0",
    "google-cloud-secret-manager==2.29.0",
    # Transitive deps pinned for reproducibility (already pulled by google-adk 2.0.0)
    "google-genai==1.75.0",
    "google-auth==2.55.1",
    "pydantic-core==2.46.4",
    "python-dotenv==1.2.2",
    "anyio==4.14.1",
    "httpx==0.28.1",
    "starlette==0.52.1",
    "fastapi==0.138.1",
    "uvicorn==0.49.0",
    "python-multipart==0.0.32",  # FastAPI multipart (résumé file upload)
    "pyyaml==6.0.3",
    "tenacity==9.1.4",
    "click==8.4.2",
    # Model Context Protocol SDK — the discovery Scout connects to our FastMCP
    # job server (discovery/mcp_server.py) as an MCP client. Ships FastMCP.
    "mcp==1.28.1",
]

[project.optional-dependencies]
dev = [
    # Linting
    "ruff==0.15.20",
    # Type checking
    "mypy==2.1.0",
    # Testing
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    # tests/test_gate_coverage.py asks setuptools which packages a build would actually
    # ship, rather than re-reading pyproject and hoping. It is a build-system requirement
    # (above), but a build requirement is not installed into the test env — CI has no
    # setuptools at runtime, so it must be declared here too.
    "setuptools>=74.0.0",
    # Type stubs for cloud libs (mypy strict)
    "types-requests==2.32.4.20250611",
]

# Flat layout: explicit package/module declaration so `pip install -e .` works on
# a clean environment (setuptools auto-discovery errors on multiple top-level
# packages + loose modules — this replaces the non-standard legacy backend hack).
# NOTE: install is editable / from-source (the container image COPYs the whole
# tree). `templates/classic_resume.html` is loaded by path relative to the source
# tree (tools/pdf_renderer.py), so a NON-editable wheel (`pip install .`) is not a
# supported distribution path — it would omit that data file. We don't publish
# wheels; deployment is container-based.
[tool.setuptools]
py-modules = ["config", "schema", "main"]

[tool.setuptools.packages.find]
include = [
    "api*",
    "auth*",
    "cli*",
    "database*",
    "discovery*",
    "evaluation*",
    "integration*",
    "jobs*",
    "models*",
    "tools*",
    "web*",
    "workflows*",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",   # line-length handled by formatter
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is a call in an argument default, which B008 flags.
# These callables return immutable markers, so the pattern is correct — but whitelisting the
# callables (rather than silencing B008 across api/) keeps B008 live there for a genuine
# mutable default. fastapi is imported nowhere outside api/ and tests/, so this is inert
# elsewhere.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]

[tool.ruff.lint.isort]
known-first-party = ["career_engine"]

[tool.mypy]
python_version = "3.12"
strict = true
# Allow untyped stubs for third-party packages that lack them
ignore_missing_imports = true
# Exclude non-source directories
exclude = ["infrastructure/", "templates/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
